<resources>
    <string name="app_name">Tasks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="casdastrar_usuario"><![CDATA[<u>Cadastrar Usuário</u>]]></string>

    <string name="error_network_not_available">A conexão com a INTERNET não esta disponível!</string>
    <string name="error_unexpected">Erro inesperado!</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="bt_gravar">Gravar</string>
    <string name="sair">Sair...</string>
    <string name="todas">Todas</string>
    <string name="proximas">Próximos 7 dias...</string>
    <string name="expiradas">Expiradas</string>

    <string name="erro">ERRO</string>

</resources>
