<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_basico"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context="cvb.com.br.tasks.gui.ActCadastroUsuario">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ed_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_btn"
        android:text="@string/ok"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/casdastrar_usuario"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

</LinearLayout>
